--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.56.0",
     "ai": "^5.0.22",
     "next": "15.5.0",
     "openai": "^5.15.0",
